<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.pedro.supercalc.MatrixActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:text="@string/matrix_calculator"
        android:textAlignment="center"
        android:textSize="40sp" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/sumSwt"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp" />

    <TextView
        android:id="@+id/sumTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sumSwt"
        android:layout_centerHorizontal="true"
        android:text="@string/_sum"
        android:textSize="50sp" />

    <EditText
        android:textAlignment="center"
        android:id="@+id/m1d"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_alignParentStart="true"
        android:layout_centerInParent="true"
        android:inputType="number"
        android:textSize="20sp" />

    <EditText
        android:textAlignment="center"
        android:id="@+id/m1e"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_centerInParent="true"
        android:layout_toEndOf="@+id/m1d"
        android:inputType="number"
        android:textSize="20sp" />

    <EditText
        android:textAlignment="center"
        android:id="@+id/m1f"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_centerInParent="true"
        android:layout_toEndOf="@+id/m1e"
        android:inputType="number"
        android:textSize="20sp" />

    <EditText
        android:textAlignment="center"
        android:id="@+id/m1a"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_above="@+id/m1d"
        android:inputType="number"
        android:textSize="20sp" />

    <EditText
        android:textAlignment="center"
        android:id="@+id/m1b"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_above="@+id/m1e"
        android:layout_toEndOf="@+id/m1a"
        android:inputType="number"
        android:textSize="20sp" />

    <EditText
        android:textAlignment="center"
        android:id="@+id/m1c"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_above="@+id/m1f"
        android:layout_toEndOf="@+id/m1b"
        android:inputType="number"
        android:textSize="20sp" />

    <EditText
        android:textAlignment="center"
        android:id="@+id/m1g"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_below="@+id/m1d"
        android:inputType="number"
        android:textSize="20sp" />

    <EditText
        android:textAlignment="center"
        android:id="@+id/m1h"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_below="@+id/m1e"
        android:layout_toEndOf="@+id/m1g"
        android:inputType="number"
        android:textSize="20sp" />

    <EditText
        android:textAlignment="center"
        android:id="@+id/m1i"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_below="@+id/m1f"
        android:layout_toEndOf="@+id/m1h"
        android:inputType="number"
        android:textSize="20sp" />

    <EditText
        android:textAlignment="center"
        android:id="@+id/m2f"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:inputType="number"
        android:textSize="20sp" />

    <EditText
        android:textAlignment="center"
        android:id="@+id/m2e"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_centerInParent="true"
        android:layout_toStartOf="@+id/m2f"
        android:inputType="number"
        android:textSize="20sp" />

    <EditText
        android:textAlignment="center"
        android:id="@+id/m2d"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_centerInParent="true"
        android:layout_toStartOf="@+id/m2e"
        android:inputType="number"
        android:textSize="20sp" />

    <EditText
        android:textAlignment="center"
        android:id="@+id/m2c"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_above="@+id/m2f"
        android:layout_toEndOf="@+id/m2e"
        android:inputType="number"
        android:textSize="20sp" />

    <EditText
        android:textAlignment="center"
        android:id="@+id/m2b"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_above="@id/m2e"
        android:layout_toStartOf="@+id/m2c"
        android:inputType="number"
        android:textSize="20sp" />

    <EditText
        android:textAlignment="center"
        android:id="@+id/m2a"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_above="@+id/m2d"
        android:layout_toStartOf="@+id/m2b"
        android:inputType="number"
        android:textSize="20sp" />

    <EditText
        android:textAlignment="center"
        android:id="@+id/m2g"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_below="@+id/m2d"
        android:layout_toStartOf="@+id/m2e"
        android:inputType="number"
        android:textSize="20sp" />

    <EditText
        android:textAlignment="center"
        android:id="@+id/m2h"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_below="@+id/m2e"
        android:layout_toEndOf="@+id/m2g"
        android:inputType="number"
        android:textSize="20sp" />

    <EditText
        android:textAlignment="center"
        android:id="@+id/m2i"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_below="@+id/m2f"
        android:layout_toEndOf="@+id/m2h"
        android:inputType="number"
        android:textSize="20sp" />

    <Button
        android:id="@+id/resultBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/m1i"
        android:layout_centerInParent="true"
        android:layout_marginTop="50dp"
        android:text="@string/show_result" />


</RelativeLayout>
